src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Address_out_of_sync__c</fullName>
        <formula>IF(MailingStreet &lt;&gt;   Account.BillingStreet , &quot;True&quot;, &quot;False&quot;)</formula>
        <inlineHelpText>Compares street address of contact with billing address of parent account to see if they are out of sync.</inlineHelpText>
        <label>Address out of sync?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>FLOOR((TODAY() - Birthdate)/365)</formula>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alumni_Communications_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alumni Communications Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alumni_Directory_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alumni Directory Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alumni_Fall_State_2011__c</fullName>
        <description>Alumni event attendance</description>
        <label>Alumni Event Attendance</label>
        <picklist>
            <picklistValues>
                <fullName>Fall State 2011 - Austin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fall State 2011 - Boston</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fall State 2011 - LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fall State 2011 - Santa Clara</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Garcetti Fundraiser - Spring 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rice Fundraiser - Spring 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgetown SS Dinner - 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Happy Hour - LA - July 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debate Night DC - Fall 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debate Night LA - Fall 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debate Night NYC - Fall 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debate Night SF - Fall 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Happy Hour - DC - Feb 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K Harris Fundraiser - May 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meese funder 7/13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prosser funder 7/13</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Business__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Link</label>
        <referenceTo>Business__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cabinet_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cabinet Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <inlineHelpText>Are you a student, teacher or chaperon?</inlineHelpText>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Alum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teacher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HS Educator</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Chapter_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chapter Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chapter_President__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chapter President</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Role__c</fullName>
        <description>The role the contact has within the account.</description>
        <inlineHelpText>The role the contact has within the account.</inlineHelpText>
        <label>Contact Role</label>
        <picklist>
            <picklistValues>
                <fullName>JSF Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JSF Trustee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Educator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>College Faculty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deceased__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deceased?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deskcom__twitter_username__c</fullName>
        <label>Twitter Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dev_Solicitation_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if Development should not send any solicitations for funds.</description>
        <label>Dev Solicitation Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Elected_Official__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Elected Official</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <label>Employer</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <inlineHelpText>Please select one category.  Data from this field is used for aggregate demographic statistics, and is not used for admissions decisions.</inlineHelpText>
        <label>Ethnicity</label>
        <picklist>
            <picklistValues>
                <fullName>Hispanic or Latino</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Hispanic or Latino</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>External User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Family_Role__c</fullName>
        <label>Family Role</label>
        <picklist>
            <picklistValues>
                <fullName>Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Father</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guardian</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Free_Reduced_Lunch__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do you participate in a free or reduced price meal program through your school?</inlineHelpText>
        <label>Free/Reduced Meal Program?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Government_Branch__c</fullName>
        <description>The branch of government the person is associated with</description>
        <inlineHelpText>The branch of government the person is associated with</inlineHelpText>
        <label>Government Branch</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Government_Level__c</fullName>
        <description>The level of government the person is associated with.</description>
        <inlineHelpText>The level of government the person is associated with.</inlineHelpText>
        <label>Government Level</label>
        <picklist>
            <picklistValues>
                <fullName>City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>County</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Governor_State__c</fullName>
        <label>Governor - State</label>
        <picklist>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid-Atlantic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Midwest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nor Cal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ohio River Valley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific Northwest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>So Cal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Texas</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Governor_Year__c</fullName>
        <label>Governor - Year</label>
        <picklist>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1998</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1997</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1996</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1995</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1994</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1993</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1992</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1991</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1990</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1989</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1988</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1987</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1986</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1985</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1984</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Graduated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to indicate that a student (or former student) has graduated from high school.</description>
        <inlineHelpText>Used to indicate that a student (or former student) has graduated from high school.</inlineHelpText>
        <label>Graduated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasOptedOutOfIM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether or not they have opted out of being contacted by Instant Messenger.</description>
        <inlineHelpText>Indicates whether or not they have opted out of being contacted by Instant Messenger.</inlineHelpText>
        <label>IM Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasOptedOutOfUSmail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether or not they have opted out of being contacted by US mail.</description>
        <inlineHelpText>Indicates whether or not they have opted out of being contacted by US mail.</inlineHelpText>
        <label>Mail Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>High_School_Graduation_Year__c</fullName>
        <label>High School Graduation Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>High_School_ID__c</fullName>
        <formula>High_School__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Record ID of the High School that the Contact is linked to.</inlineHelpText>
        <label>High School ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>High_School_Text__c</fullName>
        <label>High School (Text)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>High_School_ZIP__c</fullName>
        <inlineHelpText>Enter the 5-digit ZIP code of your school.  If you do not know the ZIP, please do a Google search for your school address.  If you attend a school outside of the U.S., enter &quot;00000&quot;.</inlineHelpText>
        <label>High School ZIP Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>High_School__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Select your school from those within the ZIP code (see left). If your school is not shown, change the ZIP to 00000 and select &quot;Other&quot;.</description>
        <inlineHelpText>Search for your high school in this field. If your school is not listed, please type and select &quot;Not Listed&quot;</inlineHelpText>
        <label>High School</label>
        <referenceTo>High_School__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Honor_Student_Code__c</fullName>
        <inlineHelpText>The Honor Student code is a 6 character code on the address panel of mailings.  It may also be used in emails.  Note that we have this same field on Opportunities (exposed via the portal), so we may need to merge the two fields for reporting purposes.</inlineHelpText>
        <label>Honor Student Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instant_Messenger_Username__c</fullName>
        <description>The person&apos;s Instant Messenger username.</description>
        <inlineHelpText>The person&apos;s Instant Messenger username.</inlineHelpText>
        <label>Instant Messenger Username</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Internal User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JSA_Role__c</fullName>
        <inlineHelpText>JSA Advisor = Designated Teacher/Advisor
JSA Affiliate = Other Chaperone</inlineHelpText>
        <label>JSA Role</label>
        <picklist>
            <controllingField>Category__c</controllingField>
            <picklistValues>
                <fullName>Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chapter President</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chapter Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JSA Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JSA Affiliate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chapter Affairs Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academic Counselor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JSA Interested Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>JSA_Scholar_Code__c</fullName>
        <description>Used to tag uploaded contacts for a particular campaign. A report can the be run to add all tagged contacts to the campaign at once. Some students are marked as Summer Returners, which is used by a summer school opportunity workflow to make some fields not required.</description>
        <inlineHelpText>Used to tag uploaded contacts for a particular campaign. A report can the be run to add all tagged contacts to the campaign at once. Some students are marked as Summer Returners, which is used by an opportunity workflow to make some fields not required.</inlineHelpText>
        <label>Upload Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JSA_State__c</fullName>
        <formula>High_School__r.JSA_State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The two character abbreviation for the JSA state, based on the location of the associated High School for the contact.</inlineHelpText>
        <label>JSA State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JSA_Zone__c</fullName>
        <formula>High_School__r.Zone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>JSA Zone, pulled from the associated High School.</inlineHelpText>
        <label>JSA Zone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lifetime_Contributions_Acct__c</fullName>
        <formula>Account.Lifetime_Contributions__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Lifetime contributions, pulled from the parent Account of this Contact.</inlineHelpText>
        <label>Lifetime Contributions (Account)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lifetime_Opportunities_from_High_School__c</fullName>
        <formula>High_School__r.Lifetime_Opportunity_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lifetime Opportunities from High School</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>List_1__c</fullName>
        <inlineHelpText>Mailing list ID (first match)</inlineHelpText>
        <label>List 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_2__c</fullName>
        <inlineHelpText>Mailing list ID (second match)</inlineHelpText>
        <label>List 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_3__c</fullName>
        <inlineHelpText>Mailing list ID (third match)</inlineHelpText>
        <label>List 3</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MACleanCity__c</fullName>
        <label>Clean City (MapAnything)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MACleanCountry__c</fullName>
        <label>Clean Country (MapAnything)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MACleanCounty__c</fullName>
        <label>Clean County (MapAnything)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MACleanDistrict__c</fullName>
        <label>Clean District (MapAnything)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MACleanPostalCode__c</fullName>
        <label>Clean Postal Code (MapAnything)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MACleanState__c</fullName>
        <label>Clean State (MapAnything)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MACleanStreet__c</fullName>
        <label>Clean Street (MapAnything)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MALatitude__c</fullName>
        <label>Latitude (MapAnything)</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MALongitude__c</fullName>
        <label>Longitude (MapAnything)</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MAQuality__c</fullName>
        <label>Quality (MapAnything)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MASimilarity__c</fullName>
        <label>Similarity (MapAnything)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MAVerifiedLatitude__c</fullName>
        <label>Verified Latitude (MapAnything)</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MAVerifiedLongitude__c</fullName>
        <label>Verified Longitude (MapAnything)</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maiden_Name__c</fullName>
        <description>The person&apos;s surname before marriage.</description>
        <inlineHelpText>The person&apos;s surname before marriage.</inlineHelpText>
        <label>Maiden Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mail_On_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use this field if mail should not be delivered to the address on file, either because the address is incorrect or because the contact is temporarily not receiving mail at the primary address.</description>
        <inlineHelpText>Use this field if mail should not be delivered to the address on file, either because the address is incorrect or because the contact is temporarily not receiving mail at the primary address.</inlineHelpText>
        <label>Mailing Address On Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mailing_Address_County__c</fullName>
        <description>The county, or the largest administrative division of a U.S. state, portion of the mailing address.</description>
        <inlineHelpText>The county, or the largest administrative division of a U.S. state, portion of the mailing address.</inlineHelpText>
        <label>Mailing Address County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Map_del__c</fullName>
        <formula>hyperlink (&quot;/servlet/servlet.Integration?lid=00b40000000xTUo&amp;eid=&quot; &amp;Id, IMAGE( &quot;servlet/servlet.FileDownload?file=01540000000E0ti&quot;, &quot;image from Documents tab&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Map</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <picklist>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Married</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Divorced</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Member_Status__c</fullName>
        <label>Member Status</label>
        <picklist>
            <picklistValues>
                <fullName>Non-member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tax-paid Member</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Middle_NAme__c</fullName>
        <description>The middle name or initial of the contact.</description>
        <inlineHelpText>The middle name or initial of the contact</inlineHelpText>
        <label>Middle Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetForum_Additional_Data__c</fullName>
        <description>Data from the old NetForum database that did not have a specific home in Salesforce. This included thing like extra address, phones, faxes, and etc,</description>
        <inlineHelpText>Data from the old NetForum database that did not have a specific home in Salesforce. This included thing like extra address, phones, faxes, and etc,</inlineHelpText>
        <label>NetForum Additional Data</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NetForum_Key__c</fullName>
        <description>The unique identifier/key this contact had as a customer in NetForum.</description>
        <inlineHelpText>The unique identifier/key this contact had as a customer in NetForum.</inlineHelpText>
        <label>NetForum Key</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Newsletter_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Newsletter Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nickname__c</fullName>
        <label>Nickname</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Occupation__c</fullName>
        <label>Occupation</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Address_On_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use this field when the &quot;Other Address&quot; (a secondary address) is on hold.</description>
        <inlineHelpText>Use this field when the &quot;Other Address&quot; (a secondary address) is on hold.</inlineHelpText>
        <label>Other Address On Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PR_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Public Relations contacts.</description>
        <inlineHelpText>Used for contacts in the public relations field.</inlineHelpText>
        <label>PR Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Guardian_First_Name__c</fullName>
        <inlineHelpText>Please enter the first name of your parent of legal guardian.  We require this information from any program participant under 18 years of age.</inlineHelpText>
        <label>Parent/Guardian First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Guardian_Last_Name__c</fullName>
        <inlineHelpText>Please enter the last name of your parent of legal guardian.  We require this information from any program participant under 18 years of age.</inlineHelpText>
        <label>Parent/Guardian Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_or_Guardian_s_Email__c</fullName>
        <inlineHelpText>Provide one email address for a parent or legal guardian.</inlineHelpText>
        <label>Parent or Guardian&apos;s Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Political_Party__c</fullName>
        <description>the political party the person has declare they belong to.</description>
        <inlineHelpText>the political party the person has declare they belong to.</inlineHelpText>
        <label>Political Party</label>
        <picklist>
            <picklistValues>
                <fullName>democrat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>independent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>republican</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Political_Spectrum__c</fullName>
        <description>What the person&apos;s political leanings are.</description>
        <inlineHelpText>What the person&apos;s political leanings are.</inlineHelpText>
        <label>Political Spectrum</label>
        <picklist>
            <picklistValues>
                <fullName>Conservative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liberal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Portal_Last_Login__c</fullName>
        <description>Date/time of last portal login.</description>
        <inlineHelpText>Date/time of last portal login</inlineHelpText>
        <label>Portal Last Login</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Preferred_Locale__c</fullName>
        <label>Preferred Locale</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Time_Zone__c</fullName>
        <label>Preferred Time Zone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is the address for internal use only?</inlineHelpText>
        <label>Privacy - Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Privacy_Email_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Should the Email field be for internal use only?</inlineHelpText>
        <label>Privacy - Email Address</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>